# ChangeLog for sys-libs/ncurses
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.176 2010/07/06 18:48:19 abcd Exp $

*ncurses-5.7-r4 (06 Jul 2010)

  06 Jul 2010; Jonathan Callen <abcd@gentoo.org> +ncurses-5.7-r4.ebuild:
  Revbump to add USE=static-libs support, fixes bug 324999

  06 Mar 2010; Mike Frysinger <vapier@gentoo.org> ncurses-5.7-r3.ebuild:
  Fix handling of leaks option #305889 by Nikolas Garofil.

  21 Jan 2010; Raúl Porcel <armin76@gentoo.org> ncurses-5.7-r3.ebuild:
  arm/ia64/m68k/sh/sparc stable wrt #299159

  16 Jan 2010; Tobias Klausmann <klausman@gentoo.org> ncurses-5.7-r3.ebuild:
  Stable on alpha, bug #299158

  10 Jan 2010; Brent Baude <ranger@gentoo.org> ncurses-5.7-r3.ebuild:
  stable ppc64, bug 299159

  08 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  ncurses-5.7-r3.ebuild:
  stable x86, bug 299159

  08 Jan 2010; Dawid Węgliński <cla@gentoo.org> ncurses-5.7-r3.ebuild:
  Stable on amd64 (bug #299159)

  08 Jan 2010; Jeroen Roovers <jer@gentoo.org> ncurses-5.7-r3.ebuild:
  Stable for HPPA PPC (bug #299159).

  22 Nov 2009; Mike Frysinger <vapier@gentoo.org> ncurses-5.7-r3.ebuild:
  Optimize cross compile step if host version already matches.

*ncurses-5.7-r3 (28 Oct 2009)

  28 Oct 2009; Alex Alexander <wired@gentoo.org> +ncurses-5.7-r3.ebuild,
  +files/ncurses-5.7-rxvt-unicode.patch:
  added rxvt-unicode terminfo generation wrt bug #192083

  22 Oct 2009; Mike Frysinger <vapier@gentoo.org> ncurses-5.7-r2.ebuild,
  +files/ncurses-5.7-tic-cross-detection.patch:
  Fix up ncurses tic script to better detect cross-compiling #288881 by
  Sergiy Borodych.

*ncurses-5.7-r2 (11 Oct 2009)

  11 Oct 2009; Mike Frysinger <vapier@gentoo.org> +ncurses-5.7-r2.ebuild,
  +files/ncurses-5.7-hashdb-open.patch:
  Add fix from upstream for db issues #245370 by Graham Murray. Fix
  cross-compiling hang with tic and older ncurses #249363.
