@@ -21,9 +21,7 @@ DIST ncurses-5.6-coverity.patch.gz 6196 RMD160 b11682ae9e043be8d6c50f040d8531f80
 DIST ncurses-5.6.tar.gz 2402592 RMD160 1a878819c43e6426500fd74ccedf0a032ef399d8 SHA1 4d54d8ad0b90fffa2780a0a45edb6fcb027ef18d SHA256 f9cac2b31683a37d65bc37119599752198a0691e462d0d1a252cf9815f5724d5
 DIST ncurses-5.7.tar.gz 2445052 RMD160 a19ca026d32255f5a4d22eb006d65182041e0234 SHA1 8233ee56ed84ae05421e4e6d6db6c1fe72ee6797 SHA256 0a9bdea5c7de8ded5c9327ed642915f2cc380753f12d4ad120ef7da3ea3498f4
 EBUILD ncurses-5.6-r2.ebuild 6906 RMD160 33d08f2df75f520afb2338758aa9828cb68ca5d1 SHA1 3a1109302f2c89d70fdfca2ab1c43caaeda2f322 SHA256 8585640aef74f32d42aafcaca0ef72a32d1598bc634ff137539528e6ab9b59ef
-EBUILD ncurses-5.7-r1.ebuild 7014 RMD160 a354f3068370d2f5c18b5ead34b3bd20eaeabdae SHA1 b4f47745ed8b33e892852e72fbdc69a90ce58aa1 SHA256 c7ee38f9c41820f619cbb578dfd71cb3c77c9400a23fa47077f0276b02c1393c
-EBUILD ncurses-5.7-r2.ebuild 7659 RMD160 5b9107186cb41ea539fca40d2b8f53452c67dc20 SHA1 55e86fd96c35413024c9e8badc810f33ead06ad2 SHA256 f138dfcaa874b4c8222af8fcdecb5a35b4317772c1e65efb6cf1b9c06b2a8713
 EBUILD ncurses-5.7-r3.ebuild 7934 RMD160 92c006268fc4e7bae1cf2ffce655f68ab4db88d1 SHA1 1ff29c2a9ac8bf61a2fd9111f9d1ac7b1daad851 SHA256 3f45d55da3b967c6b08155457be2ce63e2ff9f022e8bb49c0f34c48493796e9d
-EBUILD ncurses-5.7-r4.ebuild 7792 RMD160 e3cf4d0e93739597d925ea149807c74c810784a8 SHA1 bbffb01aba10c84834c0abe8ed59acaf3eadd992 SHA256 756a7e946af63ceed223e774a1a772c273df38ff0cb17951cad2ce4b9418aedd
-MISC ChangeLog 25654 RMD160 30a3197f647c728784d19fb1221b2eca0c9dc1f4 SHA1 8235b0070813724192ed34d37e0d783f992c5b87 SHA256 54f1e0f41b6e36cad518c6f7aff3d6c81c78fe56773023772f57d8b4dbfd7717
+EBUILD ncurses-5.7-r5.ebuild 7878 RMD160 6f7ec8066bf55e6395708e02cd20a29222753fd8 SHA1 92ef632650f01d3360c6aa34503d9596672fd5c7 SHA256 c43e607569e2ee1047133ec055e3492e0036b260339318b82fe96fa394da6561
+MISC ChangeLog 25814 RMD160 6fdd6d688253b5ee516fa162d0ad9c8a4a06ffad SHA1 145d556b28b6b1c7fe818fc5e7bd01cf1b24f3c4 SHA256 faa471933f6bf6afb907caf5af4731da10d300736c65c515e5db72776d433287
 MISC metadata.xml 320 RMD160 cd60b146f09101932293157c33ac98f273c92783 SHA1 47c720e1ec7ce4a1c4de36edeac9cfd10004bbae SHA256 906f778ea6ad65cad63404d3bd4126d32dcaef8fa0dd81d0108fd20630594779
